# web5-rs

./: .gitignore  .gitmodules  BindingLinuxDockerfile  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Justfile  Package.swift  README.md  example.rs  export.go  jitpack.yml  main.go  web5  web5-rs.code-workspace  web5_script
bindings/: Cargo.toml  README.md
bindings/c/: Cargo.toml
bindings/c/src/: lib.rs
bindings/c/web5-js/: did-jwk-create.js  index.js  package-lock.json  package.json
bindings/crypto-ffi/: Cargo.toml  build.rs
bindings/crypto-ffi/src/: crypto_ffi.udl  error.rs  key_manager.rs  key_store.rs  lib.rs  private_key.rs
bindings/crypto-ffi/src/key/: mod.rs  private_key.rs  public_key.rs
bindings/crypto-ffi/src/key_manager/: custom_key_manager.rs  key_manager.rs  mod.rs
bindings/crypto-ffi/tests/: test_generated_bindings.rs
bindings/crypto-ffi/tests/bindings/: custom_swift_key_manager.swift  swift_bindings.swift  test_in_memory_key_manager.swift
bindings/dids-ffi/: Cargo.toml  build.rs
bindings/dids-ffi/src/: did_jwk.rs  did_key.rs  dids_ffi.udl  error.rs  lib.rs
bindings/dids-ffi/src/method/: jwk.rs  key.rs  mod.rs
bindings/js/: package-lock.json  package.json  tsconfig.json
bindings/js/pkg/: package.json  web5_wasm.d.ts  web5_wasm.js  web5_wasm_bg.wasm  web5_wasm_bg.wasm.d.ts
bindings/js/tests/: crypto.test.ts  jwk.test.ts  keys.test.ts
bindings/js/tests/dids/: identifier.test.ts
bindings/kt/: install.sh  pom.xml  test.sh
bindings/src/: lib.rs  web5.udl
bindings/swift/: Package.swift  test.sh
bindings/swift/Sources/UniFFI/: web5.swift
bindings/swift/Sources/Web5/: web5.swift
bindings/swift/libweb5-rs.xcframework/macos-arm64/: libweb5.dylib
bindings/ts/: jest.config.js  package.json  tsconfig.json
bindings/ts/pkg/: web5_wasm.d.ts  web5_wasm.js
bindings/ts/tests/: keys.test.ts
bindings/uniffi/: Cargo.toml  bind.sh  build.rs  kotlin.sh  swift.sh  uniffi-bindgen.rs  uniffi.toml
bindings/uniffi-bindgen/: Cargo.toml  kotlin.sh  swift.sh
bindings/uniffi-web5/: Cargo.toml  build.rs
bindings/uniffi-web5/src/: jwk.udl  lib.rs
bindings/uniffi-wrapper/src/: lib.rs
bindings/uniffi-wrapper/src/crypto/: mod.rs
bindings/uniffi/src/: any.rs  credential.rs  credentials.rs  crypto.rs  dids.rs  dsa.rs  errors.rs  in_memory_key_manager.rs  jwk.rs  keys.rs  lib.rs  pex.rs  stubbed_in.rs  tmp.rs  tmp.txt  vc.rs  web5.udl
bindings/uniffi/src/credentials/: mod.rs  presentation_definition.rs  verifiable_credential_11.rs  verifiable_credential_1_1.rs
bindings/uniffi/src/crypto/: in_memory_key_manager.rs  key_manager.rs  mod.rs
bindings/uniffi/src/dids/: bearer_did.rs  did.rs  document.rs  identifier.rs  mod.rs  resolution_result.rs
bindings/uniffi/src/dsa/: ed25519.rs  mod.rs
bindings/uniffi/src/inner/: dids.rs  dsa.rs  keys.rs  mod.rs  vc.rs
bindings/uniffi/tmp/: jwk.rs  keys.rs
bindings/uniffi/tmp/dids/: identifier.rs
bindings/wasm/: Cargo.toml  bind.sh  build.sh
bindings/wasm/pkg/: web5_wasm.d.ts  web5_wasm.js  web5_wasm_bg.wasm  web5_wasm_bg.wasm.d.ts
bindings/wasm/sample/: index.js  package.json
bindings/wasm/src/: crypto.rs  jwk.rs  keys.rs  lib.rs
bindings/wasm/src/dids/: identifier.rs
bindings/web5-ffi/: Cargo.toml  build.rs
bindings/web5-ffi/src/: error.rs  lib.rs  web5_ffi.udl
bindings/web5-ffi/src/crypto/: key.rs  key_manager.rs
bindings/web5-wasm/: Cargo.toml
bindings/web5-wasm/src/: lib.rs
bindings/web5_c/: Cargo.toml  web5_c.h
bindings/web5_c/src/: c.rs  lib.rs
bindings/web5_flutter_rust_bridge/: README.md  pubspec.yaml
bindings/web5_flutter_rust_bridge/integration_test/: simple_test.dart
bindings/web5_flutter_rust_bridge/lib/: main.dart
bindings/web5_flutter_rust_bridge/linux/: CMakeLists.txt  my_application.cc
bindings/web5_flutter_rust_bridge/rust/: Cargo.toml
bindings/web5_flutter_rust_bridge/rust_builder/: pubspec.yaml
bindings/web5_flutter_rust_bridge/web/: index.html  manifest.json
bindings/web5_flutter_rust_bridge/windows/: CMakeLists.txt
bindings/web5_uniffi/: Cargo.toml  bind-go.sh
bindings/web5_uniffi/libtargets/: build_all.sh
bindings/web5_uniffi/src/: lib.rs  web5.udl
bindings/web5_uniffi_wrapper/: Cargo.toml
bindings/web5_uniffi_wrapper/src/: errors.rs  lib.rs
bindings/web5_wasm/: Cargo.toml
bindings/web5_wasm/src/: errors.rs  lib.rs
core/dids/: Cargo.toml
core/dids/src/: resolver.rs
crates/credentials/: Cargo.toml
crates/credentials/src/: lib.rs  presentation_definition.rs  presentation_definition_v2.rs  vc.rs  vcv2.rs  verifiable_credential.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto-v2/: Cargo.toml
crates/crypto-v2/src/: lib.rs
crates/crypto/src/: ed25519.rs  in_memory_key_manager.rs  key.rs  key_manager.rs  lib.rs  secp256k1.rs
crates/dids/: Cargo.toml
crates/dids/src/: bearer.rs  did.rs  did_jwk.rs  document.rs  identifier.rs  key.rs  key_manager.rs  key_store.rs  lib.rs  method.rs  parsed_did.rs  resolver.rs
crates/http-std/: Cargo.toml
crates/http-std/src/: client.rs  default_client.rs  error.rs  lib.rs  reqwest_client.rs
crates/jose/: Cargo.toml
crates/jose/src/: jwk.rs  jws.rs  jws_signer.rs  jwt.rs  lib.rs
crates/jwk/: ..abi.json  ..swiftdoc  Cargo.toml  build.rs  gen.sh  kotlin.sh  kt.sh  libjwks.dylib  swift.sh  uniffi.toml
crates/jwk/out-swift/: jwkFFI.modulemap
crates/jwk/src/: jwk.rs  jwk.udl  lib.rs
crates/jws/: Cargo.toml
crates/jws/src/: lib.rs  v2.rs
crates/jwt/: Cargo.toml
crates/jwt/src/: jwe.rs  jws.rs  jwt.rs  lib.rs  lib_v2.rs  v2.rs
crates/keys/: Cargo.toml  README.md
crates/keys/src/: key.rs
crates/web5/: Cargo.toml  build.rs
crates/web5-uniffi/: Cargo.toml
crates/web5-uniffi/src/: error.rs  lib.rs  result.rs
crates/web5/src/: datetime.rs  error.rs  errors.rs  http.rs  jose.rs  json.rs  jwk.rs  jws.rs  lib.rs  rfc3339.rs  test_helpers.rs  test_vectors.rs
crates/web5_cli/: Cargo.toml  README.md  install.sh
crates/web5_cli/src/: doctor.rs  main.rs  test.rs  utils.rs  vcs.rs
tmp/prototype-crypto-wasm/: Cargo.toml
tmp/prototype-crypto-wasm/src/: lib.rs
(+677 files in other folders)
