[workspace]
members = [
    "crates/*",
]
default-members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
homepage = "https://github.com/TBD54566975/web5-rs"
repository = "https://github.com/TBD54566975/web5-rs.git"
license-file = "LICENSE"

[workspace.dependencies]
async-trait = "0.1.74"
base64 = "0.22.0"
chrono = { version = "0.4.37", features = ["std"] }
josekit = "0.8.6"
thiserror = "1.0.50"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
