[workspace]
members = [ 
    "crates/web5", 
    "bindings/uniffi",
]
default-members = [
    "crates/web5",
]
resolver = "2"

[workspace.package]
homepage = "https://github.com/TBD54566975/web5-rs"
repository = "https://github.com/TBD54566975/web5-rs.git"
license-file = "LICENSE"

[workspace.dependencies]
base64 = "0.22.0"
chrono = { version = "0.4.37", features = ["std"] }
thiserror = "1.0.50"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
