[package]
name = "crypto-ffi"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
bincode = { workspace = true }
crypto = { path = "../../crates/crypto"}
thiserror = { workspace = true }
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }