[package]
name = "dids-ffi"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
thiserror = "1.0.50"
uniffi = { workspace = true }
dids = { path = "../../crates/dids" }
crypto-ffi = { path = "../crypto-ffi" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }