[package]
name = "uniffi-web5"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwk = { path = "../../crates/jwk" }
uniffi_bindgen = "0.26.0" 

[lib]
crate-type = ["cdylib", "lib"]

[build-dependencies]
uniffi_build = "0.26.0"


