[package]
name = "web5-uniffi"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
crypto = { path = "../../crates/crypto" }
dids = { path = "../../crates/dids" }
jwk = { path = "../../crates/jwk" }
keys = { path = "../../crates/keys" }
uniffi = { version = "0.27.1", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.27.1", features = ["build"] }

[lib]
crate-type = ["cdylib"]
name = "web5"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"