[package]
name = "web5_uniffi"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
thiserror = { workspace = true }
web5 = { path = "../../crates/web5" }
uniffi = { version = "0.27.1", features = ["cli"] }
web5_uniffi_wrapper = { path = "../uniffi-wrapper" }

[build-dependencies]
uniffi = { version = "0.27.1", features = ["build"] }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"