[package]
name = "web5wasm"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
crypto = { path = "../../crates/crypto" }
jwk = { path = "../../crates/jwk" }
wasm-bindgen = "0.2.92"

[lib]
name = "web5_wasm"
crate-type = ["cdylib"]