[package]
name = "dids"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
crypto = { path = "../crypto" }
did-jwk = "0.1.1"
did-web = "0.2.2"
jwk = { path = "../jwk" }
keys = { path = "../keys" }
regex = "1.10.4"
serde = { workspace = true }
serde_json = { workspace = true }
ssi-core = "0.1.0"
ssi-dids = "0.1.1"
ssi-jwk = "0.1.2"
thiserror = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tokio = { version = "1.34.0", features = ["macros", "test-util"] }