[package]
name = "credentials"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
chrono = { workspace = true }
keys = { path = "../keys" }
dids = { path = "../dids" }
jsonschema = "0.17.1"
jwt = { path = "../jwt" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
crypto = { path = "../crypto" }
serde_canonical_json = "1.0.0"