[package]
name = "credentials"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
keys = { path = "../keys" }
dids = { path = "../dids" }
hex = "0.4"
jsonpath-rust = "0.5.1"
jsonschema = "0.17.1"
jwt = { path = "../jwt" }
jws = { path = "../jws" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
crypto = { path = "../crypto" }
serde_canonical_json = "1.0.0"
tokio = { version = "1.34.0", features = ["macros", "test-util"] }
test-helpers = { path = "../test-helpers" }
