[package]
name = "crypto-v2"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
base64 = { workspace = true }
jwk = { path = "../jwk" }
rand = "0.8.5"
secp256k1 = { version = "0.28.2", features = ["rand"] }
sha2 = { workspace = true }