[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
base64 = { workspace = true }
ed25519-dalek = "2.1.1"
getrandom = { version = "0.2.12", features = ["js"] }
jwk = { path = "../jwk" }
k256 = {version = "0.13.3",  features = ["ecdsa", "jwk"]}
rand = "0.8.5"
secp256k1 = { version = "0.29.0", features = ["rand"]}
thiserror = { workspace = true }