[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
base64 = { workspace = true }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
getrandom = { version = "0.2.12", features = ["js"] }
jwk = { path = "../jwk" }
k256 = { version = "0.13.3", features = ["ecdsa", "jwk"] }
rand = { workspace = true }
thiserror = { workspace = true }