[workspace]

[package]
name = "jwk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
serde_json = "1.0.115"
uniffi = { version = "0.27.0", features = ["cli"] }
sha2 = "0.10.8"
base64 = "0.22.0"

[lib]
crate-type = ["cdylib"]
name = "jwk"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"