[package]
name = "jwk"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
thiserror = { workspace = true }
uniffi = { workspace = true }

[build-dependencies]
uniffi = { version = "0.27.1", features = [ "build" ] }

[lib]
crate-type = ["cdylib"]
name = "web5jwk"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"