[package]
name = "jws"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
crypto = { path = "../crypto" }
did_core = { path = "../did_core" }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }