[package]
name = "jwt"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
dids = { path = "../dids" }
jws = { path = "../jws" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
crypto = { path = "../crypto" }
keys = { path = "../keys" }