[package]
name = "jwt"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
base64 = { workspace = true }
jws = { path = "../jws" }
keys = { path = "../keys" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
crypto = { path = "../crypto" }
dids = { path = "../dids" }
tokio = { version = "1.34.0", features = ["macros", "test-util"] }