[package]
name = "keys"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
base64 = { workspace = true }
crypto = { path = "../crypto" }
josekit = { workspace = true }
jwk = { path = "../jwk" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
thiserror = { workspace = true }