[package]
name = "web5-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
did-jwk = "0.1.1"
ssi-dids = "0.1.1"
ssi-jwk = "0.1.2"
thiserror = "1.0.50"
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
uniffi_bindgen = { workspace = true}