[package]
name = "web5"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
base64 = { workspace = true }
byteorder = "1.5.0"
chrono = { workspace = true }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
josekit = "0.8.6"
jsonpath-rust = "0.5.1"
jsonschema = { version = "0.18.0", default-features = false }
k256 = { version = "0.13.3", features = ["ecdsa", "jwk"] }
tokio = "1.38.0"
rand = { workspace = true }
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
simple-dns = "0.7.0"
thiserror = { workspace = true }
url = "2.5.0"
uuid = { workspace = true }
zbase32 = "0.1.2"

[dev-dependencies]
backtrace = "0.3.73"
tokio = { version = "1.38.0", features = ["macros", "test-util"] }
