[package]
name = "web5"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
rust-version = "1.74.0"

[dependencies]
base64.workspace = true
byteorder = "1.5.0"
chrono = { workspace = true }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
josekit = { version = "0.8.6", features = ["vendored"] }
jsonpath-rust = "0.5.1"
jsonschema = { version = "0.18.0", features = ["draft201909", "draft202012"] }
k256 = { version = "0.13.3", features = ["ecdsa", "jwk"] }
tokio = "1.38.0"
rand = { workspace = true }
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
simple-dns = "0.7.0"
thiserror = { workspace = true }
url = "2.5.0"
uuid = { workspace = true }
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
zbase32 = "0.1.2"
lazy_static = "1.5.0"
flate2 = "1.0.33"

[dev-dependencies]
mockito = "1.5.0"
tokio = { version = "1.38.0", features = ["macros", "test-util"] }
