[package]
name = "web5_cli"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
chrono = { workspace = true }
clap = { version = "4.5.7", features = ["derive"] }
serde_json = { workspace = true }
web5 = { path = "../web5" }
url = "2.5.2"
uuid = { workspace = true }

[dependencies.openssl]
version = "0.10"
optional = true
features = ["vendored"]

[features]
default = []
x86_64_apple_darwin = ["openssl"] 