[package]
name = "prototype-crypto-wasm"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
base64 = "0.22.0"
ed25519-dalek = "2.1.1"
rand = "0.8.5"
secp256k1 = {version="0.29.0", features=["rand"]}
serde_json = "1.0.115"