[package]
name = "prototype-crypto-wasm"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
base64 = "0.22.0"
ed25519-dalek = "2.1.1"
rand = "0.8.5"
secp256k1 = {version="0.29.0", features=["rand"]}
k256 = {version = "0.13.3",  features = ["ecdsa", "jwk"]}
serde_json = "1.0.115"
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2.12", features = ["js"] }

[lib]
name = "prototype_crypto_wasm"
crate-type = ["cdylib"]
